--- a/index.html
+++ b/index.html
@@ -8,15 +8,12 @@
   
   <title>Frontend Mentor | QR code component</title>
 
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
 
-  <div>
+  <div class="container">
     <img src="images/image-qr-code.png" alt="image-qr-code">
 
     <h1>Improve your front-end skills by building projects</h1>
